--- a/package.json
+++ b/package.json
@@ -143,6 +143,8 @@
   "license": "Apache-2.0",
   "scripts": {
     "lint": "eslint . && flow",
+    "lint-fix-dry": "eslint . --fix-dry-run",
+    "lint-fix": "eslint . --fix",
     "postinstall": "jetify",
     "validate": "npm ls"
   },
